--- a/css/style.css
+++ b/css/style.css
@@ -37,9 +37,32 @@ Grey: #666666
     float:right;
 }
 /*=====about us section ===========*/
-.partner-container img{
+.partner-image-parent{
+    position: relative;
+}
+.partner-image{
+    position: relative;
+    top:0;
+    left: 0;
     width:100%;
     border-radius: 50%;
+}
+.partner-svg{
+    position: absolute;
+    bottom: 10%;
+    right: 5%;
+    width: 25%;
+    height: 25%;
+    border-radius: 50%;
+    border: white solid 5px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    
+}
+#svgp1{
+    background-color: var(--PinkLima);
 }
 /*====about section ends =======*/
 /*======image gallery section====== */
