nav bar white and transparent.

--- a/css/style.css
+++ b/css/style.css
@@ -36,7 +36,8 @@ Grey: #666666
     
 }
 .dream-ul{
-    float:right;
+    display: flex;
+    justify-content: end;
 }
 .main-heading{
     font-family: 'Montserrat', sans-serif;
