--- a/css/style.css
+++ b/css/style.css
@@ -20,7 +20,8 @@ Grey: #666666
     --OrangeLima: #FFA710;
     --PurpleLima: #667DF3;
     --DarkGreyLima: #444444;
-    --GreyLima: #666666;  
+    --GreyLima: #666666;
+    scroll-behavior: smooth;  
 }
 
 /*Landing Page  Styling*/
@@ -175,6 +176,7 @@ background-color: #667DF3;
     width: 100%;
     border-radius: 5px;
     filter: contrast(75%);
+    transition: transform .2s;
 }
 .image-heading{
     
@@ -188,6 +190,7 @@ background-color: #667DF3;
 .image-container:hover{
     color:black;
     font-weight: bolder;
+    transform: scale(1.05); 
 }
 /* ================image gallery section ends========= */
 
@@ -221,3 +224,23 @@ background-color: #667DF3;
     color:var(--PinkLima);
 }
 /*Footer styling ends here*/
+
+/*Back to top button*/
+#myBtn {
+    display: none;/* Hidden by default */
+    position: fixed; /* Fixed/sticky position */
+    bottom: 20px; /* Place the button at the bottom of the page */
+    right: 30px; /* Place the button 30px from the right */
+    z-index: 99; /* Make sure it does not overlap */
+    border: none; /* Remove borders */
+    outline: none; /* Remove outline */
+    background-color: var(--PinkLima); /* Set a background color */
+    color: white; /* Text color */
+    cursor: pointer; /* Add a mouse pointer on hover */
+    padding: 15px; /* Some padding */
+    border-radius: 10px; /* Rounded corners */
+    font-size: 18px; /* Increase font size */
+  }
+  #myBtn:hover {
+    background-color: var(--GreyLima); /* Add a dark-grey background on hover */
+  }
