--- a/css/style.css
+++ b/css/style.css
@@ -26,7 +26,7 @@ Grey: #666666
 
 /*Landing Page  Styling*/
 .landing-page{
-    background-image: url('/images/headerBackground.jpg');
+    background-image: url('../images/headerBackground.jpg');
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
